// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketingPreference component renders correctly and displays marketing information 1`] = `
<div
  onClick={[Function]}
>
  <input
    type="checkbox"
  />
  <p>
    Test title
  </p>
  <p>
    Test description
  </p>
  <p>
    Test frequency
  </p>
</div>
`;

exports[`MarketingPreference component will omit the frequency information if it is not supplied 1`] = `
<div
  onClick={[Function]}
>
  <input
    checked={true}
    type="checkbox"
  />
  <p>
    Test title
  </p>
  <p>
    Test description
  </p>
</div>
`;

exports[`MarketingPreference component will select the checkbox when the selected prop is passed 1`] = `
<div
  onClick={[Function]}
>
  <input
    checked={true}
    type="checkbox"
  />
  <p>
    Test title
  </p>
  <p>
    Test description
  </p>
  <p>
    Test frequency
  </p>
</div>
`;
